Make add to cart, connect to db, and get product from db working

--- a/ecoswap/index.html
+++ b/ecoswap/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Eco Swap</title>
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./styles/general.css">
 
@@ -31,7 +31,7 @@
 
         <div class="actions flex items-center gap-2">
           <box-icon class="cart-btn" name="cart" color="white" size="sm"></box-icon>
-          <box-icon name="user-circle" color="white" size="sm"></box-icon>
+          <a href="../view/login.html"><box-icon name="user-circle" color="white" size="sm"></box-icon></a>
         </div>
       </div>
     </header>
@@ -144,7 +144,7 @@
 
           <!-- CART ITEM CONTAINER -->
           <div id="cart-item-container" class="flex flex-col gap-4 h-96 overflow-auto">
-            <div id="cart-item" class="flex items-center justify-start gap-3 px-2 py-5 border border-white relative rounded-md">
+            <!-- <div id="cart-item" class="flex items-center justify-start gap-3 px-2 py-5 border border-white relative rounded-md">
               <img src="images/seams/Hat.jpg" alt="" class="h-14">
               
               <div class="grow">
@@ -210,7 +210,7 @@
               </div>
 
               <box-icon name='trash' class="absolute top-2 right-2" color="red"></box-icon>
-            </div>
+            </div> -->
           </div>
 
           <!-- SUMMARY -->
